# try-jupyterlab-git

./: .gitignore  .tool-versions  README.md  pyproject.toml
src/: my-first-notebook.ipynb
