[tool.poetry]
name = "jupyter-lab-git-trial"
version = "0.1.0"
description = ""
authors = ["Takuya \"Mura-Mi\" Murakami <mura.mi.nantoka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
