[tool.poetry]
name = "jupyter-lab-git-trial"
version = "0.1.0"
description = ""
authors = ["Takuya \"Mura-Mi\" Murakami <mura.mi.nantoka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.1"
dataset = "^1.6.2"
psycopg2 = "^2.9.9"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.2"
jupyterlab-git = "^0.50.0"
seaborn = "^0.13.2"
nbstripout = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
